# tess-point

./: .gitignore  LICENSE  README.md  codemeta.json  example_use_tess_stars2py_byfunction.py  pyproject.toml  setup.py  tess_stars2px.py
docs/: README.md
sandbox/: Untitled.ipynb  Untitled1.ipynb  ch.py
src/: __init__.py  tess_stars2px.py  tesspoint.py
src/tesspoint/: __init__.py  tesspoint.py  wrapper.py
src/tesspoint/data/: pointings.csv
src/tests/: test_tesspoint.py
tess-point/: __init__.py
tests/: test_tesspoint.py
wasm/: CMakeLists.txt  README.md
wasm/include/: mat_ra.h  mat_ra3.h  vec.h
wasm/public/: tess_stars2px.js  tess_stars2px.wasm
wasm/src/: mat_ra3.c  tess_stars2px.c  vec.c
